--- a/src/components/Main/CardList/CardList.scss
+++ b/src/components/Main/CardList/CardList.scss
@@ -1,6 +1,8 @@
 .cardList{
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
+    align-items: space-between;
+    gap: 5px;
     padding:20px;
 }
