--- a/src/components/NavBar/FilterItem/FilterItem.scss
+++ b/src/components/NavBar/FilterItem/FilterItem.scss
@@ -3,7 +3,7 @@
     flex-direction: row;
     padding: 5px;
     justify-content: center;
-    align-items: center;
+    align-items:baseline;
     color: black;
     input{
         padding: 10px;
