--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,4 +1,12 @@
 .navBar{
     background-color: wheat;
-    border-color: 2px solid darkred;
+    border-bottom: 2px solid darkred;
+}
+
+@media only screen and (min-width: 768px) {
+    .navBar{
+        background-color: wheat;
+        border-right: 2px solid darkred;
+        height: 100vh;
+    }
 }
