--- a/src/components/NavBar/SearchBox/SearchBox.scss
+++ b/src/components/NavBar/SearchBox/SearchBox.scss
@@ -6,6 +6,6 @@
     padding: 10px;
     &_input{
         height: 20px;
-        padding: 10px;
+        box-shadow: 0px 10px 20px rgba(black, 0.25);
     }
 }
